hover border jiggle on mobile fix. CGB XRW

--- a/source/stylesheets/_bootstrap__nav.scss
+++ b/source/stylesheets/_bootstrap__nav.scss
@@ -126,10 +126,3 @@
     }
   }
 }
-
-// At smaller
-@media all and (max-width: $breakpoint--nav) {
-  li a:hover {
-    border-bottom-width: 0!important;
-  }
-}
